--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,9 @@ jobs:
       
       - name: "Login to dockerhub"
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
+
+      - name: "Build image"
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/taskImage .
+
+      - name: "Push to dockerhub"
+        run: docker push ${{secrets.DOCKER_USERNAME}}/taskImage
