--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
 
       - name: "Build image"
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/taskImage .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/taskimage .
 
       - name: "Push to dockerhub"
-        run: docker push ${{secrets.DOCKER_USERNAME}}/taskImage
+        run: docker push ${{secrets.DOCKER_USERNAME}}/taskimage
